# robot-trading-1

./: .replit  advanced_elliott_app.py  app.py  app_fixed.py  data_provider.py  elliott_wave_analyzer.py  fibonacci_calculator.py  news_analyzer.py  price_channels.py  pyproject.toml  real_price_fetcher.py  replit.md  simple_app.py  test_data_fetch.py  test_elliott_waves.py  test_news_analysis.py  test_prices.py  trading_signals.py
