[project]
name = "elliott-wave-analyzer"
version = "0.1.0"
description = "Elliott Wave Analysis Application"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.45.0",
    "pandas==2.2.0",
    "numpy==1.26.4",
    "plotly>=5.0.0",
    "requests>=2.28.0",
    "trafilatura>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
